force-app/main/default/objects/Slack_Response__c/Slack_Response__c.object-meta.xml
<CustomObject>
    <label>Slack Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Slack Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>