force-app/main/default/objects/Slack_Response__c/fields/Action_ID__c.field-meta.xml
<CustomField>
    <fullName>Action_ID__c</fullName>
    <label>Action ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>