force-app/main/default/objects/Slack_Response__c/fields/Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Response_URL__c</fullName>
    <label>Response URL</label>
    <type>Url</type>
</CustomField>