force-app/main/default/objects/Slack_Response__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <description>The ID of the message thread in Slack. Can be used if you want to send a Slack Reply.</description>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>